fix right whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@ body {
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden
 }
 
 .hamburger-menu {
